--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,12 +79,36 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: "assets/fonts/Raleway/Raleway-Thin.ttf"
+          weight: 100
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-ExtraBold.ttf"
+          weight: 200
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-Light.ttf"
+          weight: 300
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-Regular.ttf"
+          weight: 400
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-Medium.ttf"
+          weight: 500
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-SemiBold.ttf"
+          weight: 600
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-Bold.ttf"
+          weight: 700
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-ExtraBold.ttf"
+          weight: 800
+          style: normal
+        - asset: "assets/fonts/Raleway/Raleway-Black.ttf"
+          weight: 900
+          style: normal
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
