✨ feat(project): web support: animations on splash

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.social_media_downloader">
    <application
-        android:label="social_media_downloader"
+        android:label="SM Downloader"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
